// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tooltip[Base] should render correctly  1`] = `
<div>
  <noscript />
  <button
    class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      hover me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about click 1`] = `
<div>
  <noscript />
  <button
    class="c6ujj5s soui-button-primary c-vk6w5o soui-button-button"
    dir="ltr"
    type="button"
  >
    <span>
      click me
    </span>
  </button>
</div>
`;

exports[`Tooltip[Base] should render correctly about disabled 1`] = `
<div>
  <noscript />
  <span
    class="cnfqqo4 soui-tooltip-target"
    style="cursor: not-allowed;"
  >
    <button
      class="c-7m0wge soui-button-secondary c-vk6w5o soui-button-button cn02o3i soui-button-disabled"
      dir="ltr"
      disabled=""
      style="pointer-events: none;"
      type="button"
    >
      <span>
        Disabled
      </span>
    </button>
  </span>
</div>
`;
